ceph-mount.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: media
  name: ceph-mounts
  labels:
    app: ceph-mounts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ceph-mounts
  template:
    metadata:
      labels:
        app: ceph-mounts
    spec:
      dnsPolicy: ClusterFirst
      containers:
        - name: ubuntu
          image: ubuntu:latest
          command: ['sh', '-c', 'sleep 3600']
          imagePullPolicy: IfNotPresent
          tty: true
          securityContext:
            runAsNonRoot: false
          volumeMounts:
          - name: movies
            mountPath: /movies
      volumes:
      - name: movies
        persistentVolumeClaim:
          claimName: movies
          readOnly: false
      - name: nfs-ocean
        persistentVolumeClaim:
          claimName: nfs-ocean-pvc
          readOnly: false
