daemonset-diag-tools.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: diag-tools
spec:
  selector:
    matchLabels:
      name: diag-tools
  template:
    metadata:
      labels:
        name: diag-tools
    spec:
      containers:
      - name: "ubuntu"
        image: "ubuntu:latest"
        securityContext:
          privileged: true
        command: ['sh', '-c', 'sleep 3600']
      - name: "ping"
        image: "sfoubert/iputils"
        securityContext:
          privileged: true
        command: ['sh', '-c', 'sleep 3600']
      - name: "iproute2"
        image: "igneoussystems/iproute2"
        securityContext:
          privileged: true
        command: ['sh', '-c', 'sleep 3600']
      - name: "dig"
        image: "toolbelt/dig"
        command: ['sh', '-c', 'sleep 3600']
      - name: "curl"
        image: "curlimages/curl"
        command: ['sh', '-c', 'sleep 3600']
      - name: "openssl"
        image: "alpine/openssl"
        command: ['sh', '-c', 'sleep 3600']
