test-pvc-pod.yaml
kind: Pod
apiVersion: v1
metadata:
  name: extradata-ocean
spec:
  containers:
  - name: test-pod
    image: gcr.io/google_containers/busybox:1.24
    command:
      - "/bin/sh"
    args:
      - "-c"
      - "touch /mnt/SUCCESS && exit 0 || exit 1"
    volumeMounts:
      - name: nfs-pvc
        mountPath: "/mnt"
  restartPolicy: "Never"
  volumes:
    - name: extradata-ocean
      persistentVolumeClaim:
        claimName: extradata-ocean
